fix: fix style on mobile

--- a/styles/home.css
+++ b/styles/home.css
@@ -8,6 +8,9 @@
     color: #fff;
 }
 
+.home>div {
+    padding: 1rem;
+}
 .home>div>p {
     color: white;
     font-size: 0.75rem;
